--- a/package.json
+++ b/package.json
@@ -1,10 +1,14 @@
 {
   "name": "03node-begin",
   "version": "1.0.0",
+  "engines": {
+    "node": "14.17.1"
+  },
   "description": "",
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
+    "web": "node index.js",
     "server": "supervisor index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
